<resources>
    <string name="app_name">MGI Student</string>
    <string name="nav_header_title">Student Name</string>
    <string name="nav_header_subtitle">Registered Mobile Number</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="smsServiceUrl">http://sms.masterwebwork.com/api/sendhttp.php?</string>
    <string name="smsServiceApiKey">4804AfMvfSSOpSun59378d35</string>
    <string name="smsServiceSenderId">LOGSTC</string>
    <string name="subject">Subject</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="mobileNumber">Registered Mobile Number</string>
    <string name="password">Password</string>
    <string name="errInvalidMobNum">Invalid Mobile Number</string>
    <string name="errRegisterMobNum">Mobile Number is not registered</string>
    <string name="errInvalidPassword">Invalid Password</string>
    <string name="emailId">Email Id</string>
    <string name="support">Support</string>
    <string name="appinfo">App Info</string>
    <string name="aboutUs">About Institute</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="unavailable">Not Available</string>
    <string name="errInvalidEmail">Invalid Email Id</string>
    <string name="calendar">Academic Calendar</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="mission">Mission</string>
    <string name="vision">Vision</string>
    <string name="establishmentYear">Establishment Year</string>
    <string name="event">Event</string>
    <string name="update">UPDATE</string>
    <string name="competitionWinner">Competition Winner</string>
    <string name="selectFeedbackCategory">SELECT FEEDBACK CATEGORY</string>
    <string name="feedback">Feedback</string>
    <string name="studentFees">Fees</string>
    <string name="totalFee">TOTAL FEES</string>
    <string name="paymentOption">PAYMENT OPTION</string>
    <string name="pendingFees">PENDING FEES</string>
    <string name="attendance">Attendance</string>
    <string name="createdDate">CREATED DATE</string>
    <string name="dueDate">DUE DATE</string>
    <string name="competition">Competition</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="descriptionCap">DESCRIPTION</string>
    <string name="holiday">Holiday</string>
    <string name="attachmentFile">ATTACHMENT</string>
    <string name="noteToTeacher">Note to Teacher</string>
    <string name="academicCalendar">Academic Plan</string>
    <string name="assignment">Assignment</string>
    <string name="totalPresent">PRESENT CLASS</string>
    <string name="totalConducted">TOTAL CLASS</string>
    <string name="percentage">PERCENTAGE</string>
    <string name="updateFeedbackCategory">UPDATE FEEDBACK CATEGORY</string>
    <string name="addNoteToTeacher">ADD NOTE TO TEACHER</string>
    <string name="editNoteToTeacher">EDIT NOTE TO TEACHER</string>
    <string name="food">Food</string>
    <string name="nap">Nap</string>
    <string name="potty">Potty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foodType">FOOD TYPE NAME</string>
    <string name="verify">VERIFY</string>
    <string name="start">Hi Student!</string>
    <string name="achievement">Achievement</string>
    <string name="fees">Fees</string>
    <string name="fee_structure">Fee Structure</string>
    <string name="fee_component">Fee component</string>
    <string name="amount">Amount</string>
    <string name="institute">Institute</string>
    <string name="attendanceSummary">Attendance Summary</string>
    <string name="daywiseAttendance">Daywise Attendance</string>
    <string name="date">Date</string>
    <string name="code">Subject Code</string>
    <string name="total">Total</string>
    <string name="present">Present</string>
    <string name="timeTable">Time table</string>
    <string name="examSchedule">Exam Schedule</string>
    <string name="exam">Exam Name</string>
    <string name="totalMarks">Total Marks</string>
    <string name="time">Time</string>
    <string name="cutOffMarks">Cut Off Marks</string>
    <string name="subjectName">Subject Name</string>
    <string name="examSeriesName">EXAM SERIES NAME</string>
    <string name="examSeriesDate">DATE</string>
    <string name="scoreCard">Score Card</string>
    <string name="marks">Marks Obtained</string>
    <string name="status">Status</string>
    <string name="result">Result</string>
</resources>