<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editNoteToTeacher"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_class_small"
            android:drawablePadding="@dimen/drawablePaddingSize"
            android:text="@string/updateFeedbackCategory"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spFeedBackCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/selectFeedbackCategory" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <EditText
                android:id="@+id/etFeedBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorGreyDark"
                android:hint="Enter the note"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</LinearLayout>