<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">
                <TextView
                    android:text="@string/subjectName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layout_weight="1"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">
                <TextView
                    android:text="@string/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layout_weight="1"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">
                <TextView
                    android:text="@string/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layout_weight="1"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">
                <TextView
                    android:text="@string/totalMarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layout_weight="1"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvTotalMarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">
                <TextView
                    android:text="@string/marks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layout_weight="1"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvMarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">
                <TextView
                    android:text="@string/result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layout_weight="1"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>