<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/colorGreyLight"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".FragmentAttendanceSummary">

    <LinearLayout
        android:id="@+id/rlAttendanceSummary"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cvChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">
        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chartAttendanceSummary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvSubjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TableLayout
                android:id="@+id/tblSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:stretchColumns="1">
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/code"
                        android:layout_margin="0.5dp"
                        android:padding="3dp"
                        android:background="@drawable/cell_border_color_primary"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                         />
                    <TextView
                        android:text="@string/subject"
                        android:layout_margin="0.5dp"
                        android:padding="3dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:background="@drawable/cell_border_color_primary"
                        />
                    <TextView
                        android:text="@string/total"
                        android:layout_margin="0.5dp"
                        android:padding="3dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:background="@drawable/cell_border_color_primary"
                        />
                    <TextView
                        android:text="@string/present"
                        android:layout_margin="0.5dp"
                        android:padding="3dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:background="@drawable/cell_border_color_primary"
                        />
                </TableRow>

            </TableLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNoList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/no_list" />

        <TextView
            android:id="@+id/tvNoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="No Data"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="normal|bold" />
    </LinearLayout>
</LinearLayout>