<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <ImageView
                android:id="@+id/ivSubjectPic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_subjects"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_header_desc"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSubjectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrey"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCreatedDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_calendar_small"
                        android:drawablePadding="@dimen/drawablePaddingSize"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvDueDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_calendar_small"
                        android:drawablePadding="@dimen/drawablePaddingSize"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="25dp"
                        android:text="@string/createdDate"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingLeft="25dp"
                        android:text="@string/dueDate"
                        android:textSize="12sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <!--<ImageView
                    android:id="@+id/ivHomeWorkRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:src="@drawable/ic_next_page"
                    android:tint="@color/colorPrimary" />-->

                <ImageView
                    android:id="@+id/ivAttachmentHomeWork"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:src="@drawable/ic_file_download"
                    android:tint="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>